--- a/app/src/main/res/layout/item_cat.xml
+++ b/app/src/main/res/layout/item_cat.xml
@@ -16,16 +16,16 @@
             android:id="@+id/tvRaceName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="Nombre de la Raza"
-            android:background="@color/white"
-            android:textAppearance="?attr/textAppearanceBody1"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:padding="@dimen/common_pading_min"
-            android:layout_margin="@dimen/common_pading_min"
+            android:background="@color/white"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="?attr/textAppearanceBody1"
+            app:layout_constraintBottom_toTopOf="@id/imgcat"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/imgcat"/>
+            tools:text="Nombre de la Raza" />
 
         <ImageView
             android:id="@+id/imgcat"
@@ -46,7 +46,6 @@
             android:maxLines="1"
             android:padding="@dimen/common_pading_min"
             android:textAppearance="?attr/textAppearanceBody1"
-            android:layout_marginStart="@dimen/common_pading_min"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgcat"
@@ -62,7 +61,6 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:padding="@dimen/common_pading_min"
-            android:layout_marginEnd="@dimen/common_pading_min"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgcat"/>
 
