--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_two_colors"
     tools:context=".mainModule.view.MainActivity">
 
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_marginVertical="@dimen/common_pading_max"
        android:text="@string/tv_title"
-       android:textAppearance="?attr/textAppearanceBody1"
+       android:textColor="@color/white"
+       android:textSize="24sp"
+       android:textAppearance="?attr/textAppearanceHeadline6"
+       android:layout_marginTop="@dimen/common_pading_max"
+       android:layout_marginStart="@dimen/common_pading_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintBottom_toTopOf="@id/tvDescriptionTitle"/>
+
+   <TextView
+       android:id="@+id/tvDescriptionTitle"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/description_title"
+       android:textColor="@color/gray_green"
+       android:textSize="16sp"
+       android:textAppearance="?attr/textAppearanceSubtitle1"
+       android:layout_marginTop="@dimen/common_pading_min"
+       android:layout_marginBottom="@dimen/common_pading_max"
+       android:layout_marginStart="@dimen/common_pading_default"
+       app:layout_constraintTop_toBottomOf="@id/tvTitle"
+       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"/>
 
    <androidx.recyclerview.widget.RecyclerView
@@ -27,7 +45,7 @@
        android:layout_marginHorizontal="@dimen/common_margin_min_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toBottomOf="@id/tvTitle"
+       app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_cat"/>
 
