--- a/app/src/main/res/layout/item_cat.xml
+++ b/app/src/main/res/layout/item_cat.xml
@@ -3,66 +3,43 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/common_pading_min">
+    android:layout_width="250dp"
+    android:layout_height="250dp"
+    app:cardCornerRadius="@dimen/common_pading_default"
+    app:cardElevation="@dimen/common_pading_default"
+    android:layout_marginStart="@dimen/common_pading_default"
+    android:layout_marginTop="@dimen/common_pading_min">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <TextView
-            android:id="@+id/tvRaceName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/common_pading_min"
-            android:background="@color/white"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textAppearance="?attr/textAppearanceBody1"
-            app:layout_constraintBottom_toTopOf="@id/imgcat"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Nombre de la Raza" />
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imgcat"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="match_parent"
             android:contentDescription="@string/description_img_cat"
-            android:background="@android:color/darker_gray"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvRaceName" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
-            android:id="@+id/tvCountryOrigin"
-            android:layout_width="0dp"
+            android:id="@+id/tvRaceName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:ellipsize="end"
             android:maxLines="1"
+            android:textSize="16sp"
+            android:textColor="@color/dark_teal"
             android:padding="@dimen/common_pading_min"
-            android:textAppearance="?attr/textAppearanceBody1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgcat"
-            tools:text="Pais de origen" />
-
-        <TextView
-            android:id="@+id/tvIntelligence"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            tools:text="Inteligencia"
-            android:background="@color/white"
-            android:textAppearance="?attr/textAppearanceBody1"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:padding="@dimen/common_pading_min"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgcat"/>
+            android:layout_marginTop="@dimen/common_pading_default"
+            android:layout_marginStart="@dimen/common_pading_default"
+            android:textAppearance="?attr/textAppearanceSubtitle2"
+            app:layout_constraintEnd_toEndOf="@id/imgcat"
+            app:layout_constraintStart_toStartOf="@+id/imgcat"
+            app:layout_constraintTop_toTopOf="@id/imgcat"
+            tools:text="Nombre de la Raza" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
