--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal">#275555</color>
+    <color name="dark_teal">#1f4a48</color>
+    <color name="dark_orange">#f77814</color>
+    <color name="gray_green">#8ba2a3</color>
+
+
 </resources>
