--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,22 @@
     android:background="@drawable/background_two_colors"
     tools:context=".mainModule.view.MainActivity">
 
+
+   <com.google.android.material.appbar.MaterialToolbar
+       android:id="@+id/toolbar_top"
+       style="@style/Platform.MaterialComponents.Light"
+       android:layout_width="match_parent"
+       android:layout_height="56dp"
+       android:theme="@style/toolbar"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.0"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:menu="@menu/menu_toolbar"
+       app:navigationIcon="@drawable/ic_menu">
+
+   </com.google.android.material.appbar.MaterialToolbar>
+
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
@@ -17,7 +33,7 @@
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="@dimen/common_pading_max"
        android:layout_marginStart="@dimen/common_pading_default"
-       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/toolbar_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvDescriptionTitle"/>
 
