--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,15 +52,48 @@
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"/>
 
+
+      <Button
+          android:id="@+id/btn_cat"
+          android:layout_width="100dp"
+          android:layout_height="150dp"
+          android:text="@string/btn_cats"
+          android:rotation="270"
+          android:textColor="@color/gray_green"
+          android:textSize="16sp"
+          app:icon="@drawable/ic_pets"
+          app:iconTint="@color/transparent"
+          app:iconSize="16dp"
+          app:iconPadding="4dp"
+          style="@style/Widget.MaterialComponents.Button.TextButton"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toTopOf="@id/recyclerView"/>
+
+      <Button
+          android:id="@+id/btn_dog"
+          android:layout_width="100dp"
+          android:layout_height="150dp"
+          android:text="@string/btn_dogs"
+          android:rotation="270"
+          android:textSize="16sp"
+          android:textColor="@color/gray_green"
+          app:icon="@drawable/ic_pets"
+          app:iconTint="@color/transparent"
+          app:iconSize="16dp"
+          app:iconPadding="4dp"
+          style="@style/Widget.MaterialComponents.Button.TextButton"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/btn_cat"/>
+
+
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
-       android:layout_width="0dp"
+       android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/common_pading_min"
        android:clipToPadding="false"
        android:layout_marginHorizontal="@dimen/common_margin_min_card"
        app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_cat"/>
