--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="dark_teal">#1f4a48</color>
     <color name="dark_orange">#f77814</color>
     <color name="gray_green">#8ba2a3</color>
-
+    <color name="transparent">#00000000</color>
 
 </resources>
