REFACTORIZACION - Pantalla responsiva
- Se crean recursos que adaptan las dimensiones de la app cuando el dispositivo cambie de orientación.
- Se implementa Scroll para los elementos para permitir el desplazamiento de la pantalla en modo horizontal.

--- a/app/src/main/res/drawable/background_two_colors.xml
+++ b/app/src/main/res/drawable/background_two_colors.xml
@@ -9,7 +9,8 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/dark_teal"/>
             <corners android:topRightRadius="15dp"/>
-            <size android:width="300dp" android:height="500dp"/>
+            <size android:width="@dimen/common_btc_width"
+                android:height="@dimen/common_btc_height"/>
         </shape>
     </item>
 </layer-list>
