--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_two_colors"
-    tools:context=".mainModule.view.MainActivity">
+    tools:context=".view.MainActivity">
 
 
    <com.google.android.material.appbar.MaterialToolbar
