--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,8 +40,8 @@
              android:textColor="@color/white"
              android:textSize="24sp"
              android:textAppearance="?attr/textAppearanceHeadline6"
-             android:layout_marginTop="@dimen/common_pading_max"
-             android:layout_marginStart="@dimen/common_pading_default"
+             android:layout_marginTop="@dimen/common_padding_max"
+             android:layout_marginStart="@dimen/common_padding_default"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toTopOf="@id/tvDescriptionTitle"/>
@@ -54,12 +54,12 @@
              android:textColor="@color/gray_green"
              android:textSize="16sp"
              android:textAppearance="?attr/textAppearanceSubtitle1"
-             android:layout_marginTop="@dimen/common_pading_min"
-             android:layout_marginBottom="@dimen/common_pading_max"
-             android:layout_marginStart="@dimen/common_pading_default"
+             android:layout_marginTop="@dimen/common_padding_min"
+             android:layout_marginBottom="@dimen/common_padding_max"
+             android:layout_marginStart="@dimen/common_padding_default"
              app:layout_constraintTop_toBottomOf="@id/tvTitle"
              app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintBottom_toTopOf="@id/recyclerView"/>
+             app:layout_constraintBottom_toTopOf="@id/breeds_fragment"/>
 
 
          <Button
@@ -75,7 +75,7 @@
              app:iconPadding="4dp"
              style="@style/Widget.MaterialComponents.Button.TextButton"
              app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintTop_toTopOf="@id/recyclerView"/>
+             app:layout_constraintTop_toTopOf="@id/breeds_fragment"/>
 
          <Button
              android:id="@+id/btn_dog"
@@ -93,17 +93,16 @@
              app:layout_constraintTop_toBottomOf="@id/btn_cat"/>
 
 
-         <androidx.recyclerview.widget.RecyclerView
-             android:id="@+id/recyclerView"
+         <androidx.fragment.app.FragmentContainerView
+             android:id="@+id/breeds_fragment"
+             android:name="androidx.navigation.fragment.NavHostFragment"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:paddingBottom="@dimen/common_pading_min"
-             android:clipToPadding="false"
-             android:layout_marginHorizontal="@dimen/common_margin_min_card"
+             android:layout_marginBottom="@dimen/common_padding_max"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
              app:layout_constraintBottom_toBottomOf="parent"
-             tools:listitem="@layout/item_cat"/>
+             app:navGraph="@navigation/breeds_navigation" />
 
       </androidx.constraintlayout.widget.ConstraintLayout>
 
