IMPLEMENTACION - Api Dogs
- Se implementa funcionalidad para obtener listado de Dogs bajo la arquitectura MVVM.
- Se crean entities, model, viewModel, adapter e interfaces necesarias.
- Se refactoriza nombre de archivos existentes siguiendo recomendaciones para mantener la organización de la estructura del proyecto.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="common_padding_max">32dp</dimen>
     <dimen name="common_btc_width">300dp</dimen>
     <dimen name="common_btc_height">500dp</dimen>
+    <dimen name="margin_botton">50dp</dimen>
 </resources>
