--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
              android:name="androidx.navigation.fragment.NavHostFragment"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:layout_marginBottom="@dimen/common_padding_max"
+             android:layout_marginBottom="@dimen/margin_botton"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
              app:layout_constraintBottom_toBottomOf="parent"
