Refactorizacion - Vista breeds
- Se ajusta nombre de las mascotas para mejorar su apariencia visual.
- Se ajusta Título y subtitulo para evitar su desplazamiento cuando no carguen los elementos card.

--- a/app/src/main/res/layout/item_breed.xml
+++ b/app/src/main/res/layout/item_breed.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="250dp"
     android:layout_height="250dp"
-    app:cardCornerRadius="@dimen/common_padding_default"
-    app:cardElevation="@dimen/common_padding_default"
     android:layout_marginStart="@dimen/common_padding_default"
-    android:layout_marginTop="@dimen/common_padding_min">
+    android:layout_marginTop="@dimen/common_padding_min"
+    app:cardCornerRadius="@dimen/common_padding_default"
+    app:cardElevation="@dimen/common_padding_default">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,26 +18,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/description_img_cat"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvRaceName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white_transparent"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="16sp"
-            android:textColor="@color/dark_teal"
             android:padding="@dimen/common_padding_min"
-            android:layout_marginTop="@dimen/common_padding_default"
-            android:layout_marginStart="@dimen/common_padding_default"
             android:textAppearance="?attr/textAppearanceSubtitle2"
+            android:textColor="@color/dark_teal"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/imgcat"
             app:layout_constraintEnd_toEndOf="@id/imgcat"
             app:layout_constraintStart_toStartOf="@+id/imgcat"
-            app:layout_constraintTop_toTopOf="@id/imgcat"
             tools:text="Nombre de la Raza" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
