--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,104 +8,104 @@
     tools:context=".view.MainActivity">
 
 
-   <com.google.android.material.appbar.MaterialToolbar
-       android:id="@+id/toolbar_top"
-       style="@style/Platform.MaterialComponents.Light"
-       android:layout_width="match_parent"
-       android:layout_height="56dp"
-       android:theme="@style/toolbar"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintHorizontal_bias="0.0"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
-       app:menu="@menu/menu_toolbar"
-       app:navigationIcon="@drawable/ic_menu">
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar_top"
+        style="@style/Platform.MaterialComponents.Light"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:theme="@style/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/menu_toolbar"
+        app:navigationIcon="@drawable/ic_menu">
 
-   </com.google.android.material.appbar.MaterialToolbar>
+    </com.google.android.material.appbar.MaterialToolbar>
 
-   <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       app:layout_constraintTop_toBottomOf="@id/toolbar_top">
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_top">
 
-      <androidx.constraintlayout.widget.ConstraintLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-         <TextView
-             android:id="@+id/tvTitle"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="@string/tv_title"
-             android:textColor="@color/white"
-             android:textSize="24sp"
-             android:textAppearance="?attr/textAppearanceHeadline6"
-             android:layout_marginTop="@dimen/common_padding_max"
-             android:layout_marginStart="@dimen/common_padding_default"
-             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintBottom_toTopOf="@id/tvDescriptionTitle"/>
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/common_padding_default"
+                android:layout_marginTop="@dimen/common_padding_max"
+                android:text="@string/tv_title"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-         <TextView
-             android:id="@+id/tvDescriptionTitle"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="@string/description_title"
-             android:textColor="@color/gray_green"
-             android:textSize="16sp"
-             android:textAppearance="?attr/textAppearanceSubtitle1"
-             android:layout_marginTop="@dimen/common_padding_min"
-             android:layout_marginBottom="@dimen/common_padding_max"
-             android:layout_marginStart="@dimen/common_padding_default"
-             app:layout_constraintTop_toBottomOf="@id/tvTitle"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintBottom_toTopOf="@id/breeds_fragment"/>
-
-
-         <Button
-             android:id="@+id/btn_cat"
-             android:layout_width="100dp"
-             android:layout_height="150dp"
-             android:text="@string/btn_cats"
-             android:rotation="270"
-             android:textColor="@color/gray_green"
-             android:textSize="16sp"
-             app:icon="@drawable/ic_pets"
-             app:iconSize="16dp"
-             app:iconPadding="4dp"
-             style="@style/Widget.MaterialComponents.Button.TextButton"
-             app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintTop_toTopOf="@id/breeds_fragment"/>
-
-         <Button
-             android:id="@+id/btn_dog"
-             android:layout_width="100dp"
-             android:layout_height="150dp"
-             android:text="@string/btn_dogs"
-             android:rotation="270"
-             android:textSize="16sp"
-             android:textColor="@color/gray_green"
-             app:icon="@drawable/ic_pets"
-             app:iconSize="16dp"
-             app:iconPadding="4dp"
-             style="@style/Widget.MaterialComponents.Button.TextButton"
-             app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintTop_toBottomOf="@id/btn_cat"/>
+            <TextView
+                android:id="@+id/tvDescriptionTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/common_padding_default"
+                android:layout_marginTop="@dimen/common_padding_min"
+                android:layout_marginBottom="@dimen/common_padding_max"
+                android:text="@string/description_title"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
+                android:textColor="@color/gray_green"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
 
-         <androidx.fragment.app.FragmentContainerView
-             android:id="@+id/breeds_fragment"
-             android:name="androidx.navigation.fragment.NavHostFragment"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginBottom="@dimen/margin_botton"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
-             app:layout_constraintBottom_toBottomOf="parent"
-             app:navGraph="@navigation/breeds_navigation" />
+            <Button
+                android:id="@+id/btn_cat"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="100dp"
+                android:layout_height="150dp"
+                android:rotation="270"
+                android:text="@string/btn_cats"
+                android:textColor="@color/gray_green"
+                android:textSize="16sp"
+                app:icon="@drawable/ic_pets"
+                app:iconPadding="4dp"
+                app:iconSize="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/breeds_fragment" />
 
-      </androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/btn_dog"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="100dp"
+                android:layout_height="150dp"
+                android:rotation="270"
+                android:text="@string/btn_dogs"
+                android:textColor="@color/gray_green"
+                android:textSize="16sp"
+                app:icon="@drawable/ic_pets"
+                app:iconPadding="4dp"
+                app:iconSize="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_cat" />
 
-   </ScrollView>
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/breeds_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="@dimen/margin_botton"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
+                app:navGraph="@navigation/breeds_navigation" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
